Optimized two .jpg images. Added useful comment in index.html

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
 
 
+	<!-- Start above fold content-->
 
 
 	<!--  Hero Section  -->
@@ -107,7 +108,7 @@
 	</section>
 	<!--  End Featured On Section  -->
 
-
+<!-- End of above content-->
 
 
 
