--- a/index.html
+++ b/index.html
@@ -290,14 +290,14 @@
 
 
 	<script type="text/javascript" src="js/jquery.js"></script>
-	<script defer type="text/javascript" src="js/ajaxchimp.js"></script>
+	<script async type="text/javascript" src="js/ajaxchimp.js"></script>
 
-	<script defer type="text/javascript" src="js/owl.carousel.min.js"></script>
-	<script defer type="text/javascript" src="js/wow.js"></script>
-	<script defer type="text/javascript" src="js/parallax.js"></script>
-	<script defer type="text/javascript" src="js/nicescroll.js"></script>
+	<script async type="text/javascript" src="js/owl.carousel.min.js"></script>
+	<script async type="text/javascript" src="js/wow.js"></script>
+	<script async type="text/javascript" src="js/parallax.js"></script>
+	<script async type="text/javascript" src="js/nicescroll.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	<script defer type="text/javascript" src="js/scrollTo.js"></script>	
+	<script async type="text/javascript" src="js/scrollTo.js"></script>	
 
 
 </body>
